# jobrad

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  hypercorn.toml  pyproject.toml
chat_service/: app.py  asgi.py  config.py  routes.py  schema.py  services.py  transport.py
chat_service/model/: __init__.py  chat.py
chat_service/test/: test_routes.py
config/: config.toml
migrations/: env.py
migrations/versions/: 01_9018b4fb75f3_create_messages_table.py  02_1bcfd5c7736c_add_resolution_column.py
