[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "A simple python backend for a chat functionality."
authors = ["Adrian Barfuss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.6"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
quart-schema = "^0.20.0"
typed-settings = "^24.4.0"
hypercorn = "^0.17.3"
alembic = "^1.13.2"
attrs = "^24.2.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"
mypy = "^1.11.2"
isort = "^5.13.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode="auto"


[tool.mypy]
strict = true
exclude = [".venv", ".pytest_cache", ".mypy_cache", "migrations", ".+/tests/.+"]

[tool.isort]
py_version=312
line_length=120
profile="black"